--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-polyfill": "^6.26.0",
     "css-loader": "^0.28.7",
     "imports-loader": "^0.7.1",
+    "jquery": "^3.3.1",
     "snapsvg": "^0.5.1",
     "svgpath": "^2.2.1"
   },
